src/test/examples/custom/invalid/syntaxErr/class/missingConstructor.wacc
# program cannot a empty class, must have constructor

# Exit:
# 100

# Program:

begin
  class H is 
  end
end